force-app/main/default/objects/Territory_Plan__c/Territory_Plan__c.object-meta.xml
<CustomObject>
    <label>Territory Plan</label>
    <nameField>
        <label>Territory Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>