force-app/main/default/objects/Territory_Plan__c/fields/Account_Erosion_Comments__c.field-meta.xml
<CustomField>
    <fullName>Account_Erosion_Comments__c</fullName>
    <inlineHelpText>Identify top 5 GTM erosion accounts and actions to reverse or mitigate.</inlineHelpText>
    <label>Account Erosion Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>