force-app/main/default/objects/Territory_Plan__c/fields/Account_reassignments__c.field-meta.xml
<CustomField>
    <fullName>Account_reassignments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Reassignments</label>
    <type>Checkbox</type>
</CustomField>