force-app/main/default/objects/Territory_Plan__c/fields/Account_reassignments_actions__c.field-meta.xml
<CustomField>
    <fullName>Account_reassignments_actions__c</fullName>
    <label>Account Reassignments Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Account_reassignments__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Reassign to Inside Sales</fullName>
            </value>
            <value>
                <fullName>Reassign to new Sales Rep</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>