force-app/main/default/objects/Territory_Plan__c/fields/Account_reassignments_comments__c.field-meta.xml
<CustomField>
    <fullName>Account_reassignments_comments__c</fullName>
    <inlineHelpText>Based on account retention targets, under developed targets and erosion data, identify any accounts that would be targetd for potential re-assignment. Focus on accounts with potential value of over $50,000/sales (SS/Fordis/MH) and $100,000 FP</inlineHelpText>
    <label>Account Reassignments Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>