force-app/main/default/objects/Territory_Plan__c/fields/Account_Retention_Actions__c.field-meta.xml
<CustomField>
    <fullName>Account_Retention_Actions__c</fullName>
    <label>Mitigate Migration Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Retain_Customers__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Create New Account Plans</fullName>
            </value>
            <value>
                <fullName>Update Account Plans</fullName>
            </value>
            <value>
                <fullName>Schedule Customer Business Reviews</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>