force-app/main/default/objects/Territory_Plan__c/fields/Accounts_Needing_Progress_by_Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Needing_Progress_by_Next_Review__c</fullName>
    <label>Accounts Needing Progress by Next Review</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>