force-app/main/default/objects/Territory_Plan__c/fields/Actual_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Review_Date__c</fullName>
    <label>Actual Review Date</label>
    <type>Date</type>
</CustomField>