force-app/main/default/objects/Territory_Plan__c/fields/AR_Improvement_Comments__c.field-meta.xml
<CustomField>
    <fullName>AR_Improvement_Comments__c</fullName>
    <label>AR Improvement Comments</label>
    <type>TextArea</type>
</CustomField>