force-app/main/default/objects/Territory_Plan__c/fields/AVP_Email__c.field-meta.xml
<CustomField>
    <fullName>AVP_Email__c</fullName>
    <description>Holds the AVP/GSM Email Address from the related Primary Sales Rep record.</description>
    <formula>Primary_Sales_Rep__r.GSM_Email__c</formula>
    <label>AVP Email</label>
    <type>Text</type>
</CustomField>