force-app/main/default/objects/Territory_Plan__c/fields/Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Completed_Status__c</fullName>
    <label>Final Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory_Plan_Complete__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Improved</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Deteriorated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>