force-app/main/default/objects/Territory_Plan__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field takes the value of the country field from the primary sales rep table</description>
    <formula>TEXT( Primary_Sales_Rep__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>