force-app/main/default/objects/Territory_Plan__c/fields/Customer_Retention_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Retention_Comments__c</fullName>
    <label>Customer Retention Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>