force-app/main/default/objects/Territory_Plan__c/fields/Deactivated_Rep__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Rep__c</fullName>
    <formula>if(Primary_Sales_Rep__r.deactivated_user__c,&quot;yes&quot;,&quot;&quot;)</formula>
    <inlineHelpText>Shows whether the PSR is currently an active Rep.</inlineHelpText>
    <label>Deactivated Rep?</label>
    <type>Text</type>
</CustomField>