force-app/main/default/objects/Territory_Plan__c/fields/Employee_Dev_Comments__c.field-meta.xml
<CustomField>
    <fullName>Employee_Dev_Comments__c</fullName>
    <label>Employee Development Comments</label>
    <type>TextArea</type>
</CustomField>