force-app/main/default/objects/Territory_Plan__c/fields/Employee_Development__c.field-meta.xml
<CustomField>
    <fullName>Employee_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Development</label>
    <type>Checkbox</type>
</CustomField>