force-app/main/default/objects/Territory_Plan__c/fields/Employee_Development_Actions__c.field-meta.xml
<CustomField>
    <fullName>Employee_Development_Actions__c</fullName>
    <label>Employee Development Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Employee_Development__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Training</fullName>
            </value>
            <value>
                <fullName>Schedule Rep Ride With</fullName>
            </value>
            <value>
                <fullName>Segment/Product Training</fullName>
            </value>
            <value>
                <fullName>Value Proposition Training</fullName>
            </value>
            <value>
                <fullName>Vendor Training</fullName>
            </value>
            <value>
                <fullName>Zilliant Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>