force-app/main/default/objects/Territory_Plan__c/fields/FS_Sales__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales__c</fullName>
    <formula>Segment_Budget__r.FS_Sales_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS Sales $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>