force-app/main/default/objects/Territory_Plan__c/fields/GTM_Per_Delivery_to_Target_Comments__c.field-meta.xml
<CustomField>
    <fullName>GTM_Per_Delivery_to_Target_Comments__c</fullName>
    <label>GTM Per Delivery to Target Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>