force-app/main/default/objects/Territory_Plan__c/fields/Improve_Inventory_Performance__c.field-meta.xml
<CustomField>
    <fullName>Improve_Inventory_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improve Inventory Management</label>
    <type>Checkbox</type>
</CustomField>