force-app/main/default/objects/Territory_Plan__c/fields/Improve_Performance__c.field-meta.xml
<CustomField>
    <fullName>Improve_Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improve Performance</label>
    <type>Checkbox</type>
</CustomField>