force-app/main/default/objects/Territory_Plan__c/fields/Improve_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Improve_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improve Margin Management</label>
    <type>Checkbox</type>
</CustomField>