force-app/main/default/objects/Territory_Plan__c/fields/Inventory_Actions__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Actions__c</fullName>
    <label>Inventory Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Improve_Inventory_Performance__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Disposition required - Dead/Excess item</fullName>
            </value>
            <value>
                <fullName>Disposition required - New item</fullName>
            </value>
            <value>
                <fullName>Meet with Vendor to reduce buy quantity</fullName>
            </value>
            <value>
                <fullName>Probation – No new items</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>