force-app/main/default/objects/Territory_Plan__c/fields/Inventory_Comments__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Comments__c</fullName>
    <label>Inventory Comments</label>
    <type>TextArea</type>
</CustomField>