force-app/main/default/objects/Territory_Plan__c/fields/Manage_pipeline__c.field-meta.xml
<CustomField>
    <fullName>Manage_pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Sales Growth/Opportunities</label>
    <type>Checkbox</type>
</CustomField>