force-app/main/default/objects/Territory_Plan__c/fields/Packaging_GTM__c.field-meta.xml
<CustomField>
    <fullName>Packaging_GTM__c</fullName>
    <formula>Segment_Budget__r.Packaging_GTM_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packaging CGTM $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>