force-app/main/default/objects/Territory_Plan__c/fields/Packaging_Sales__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Sales__c</fullName>
    <formula>Segment_Budget__r.Packaging_Sales_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packaging Sales $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>