force-app/main/default/objects/Territory_Plan__c/fields/Paper_Sales__c.field-meta.xml
<CustomField>
    <fullName>Paper_Sales__c</fullName>
    <formula>Segment_Budget__r.Paper_Sales_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paper Sales $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>