force-app/main/default/objects/Territory_Plan__c/fields/Performance_Actions__c.field-meta.xml
<CustomField>
    <fullName>Performance_Actions__c</fullName>
    <label>Performance Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Improve_Performance__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Commission Dial Down</fullName>
            </value>
            <value>
                <fullName>National Accounts Dial Down</fullName>
            </value>
            <value>
                <fullName>Salary to Commission</fullName>
            </value>
            <value>
                <fullName>HR Action Plan</fullName>
            </value>
            <value>
                <fullName>Schedule Rep Ride With</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>