force-app/main/default/objects/Territory_Plan__c/fields/Performance_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>Performance_Management_Comments__c</fullName>
    <label>Performance Management Comments</label>
    <type>TextArea</type>
</CustomField>