force-app/main/default/objects/Territory_Plan__c/fields/Pipeline_Actions__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Actions__c</fullName>
    <label>Sales Growth/Opportunities Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Manage_pipeline__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Start new proj&apos;s w/existing customers</fullName>
            </value>
            <value>
                <fullName>Obtain New Leads</fullName>
            </value>
            <value>
                <fullName>Update/Manage Pipeline</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>