force-app/main/default/objects/Territory_Plan__c/fields/Pipeline_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Comments__c</fullName>
    <label>Sales Growth/Opportunities Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>