force-app/main/default/objects/Territory_Plan__c/fields/Price_Optimization_to_Target_Comments__c.field-meta.xml
<CustomField>
    <fullName>Price_Optimization_to_Target_Comments__c</fullName>
    <label>Price Optimization to Target Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>