force-app/main/default/objects/Territory_Plan__c/fields/Pricing_Actions__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Actions__c</fullName>
    <label>Margin Management Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Improve_Pricing__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Improve pricing to target</fullName>
            </value>
            <value>
                <fullName>Maximize utilization of Zilliant</fullName>
            </value>
            <value>
                <fullName>Obtain deviated mill pricing</fullName>
            </value>
            <value>
                <fullName>Review contracts, deviations, pricebooks</fullName>
            </value>
            <value>
                <fullName>Sales Rep margin review</fullName>
            </value>
            <value>
                <fullName>Sell Unisource focus brands</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>