force-app/main/default/objects/Territory_Plan__c/fields/Pricing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Comments__c</fullName>
    <label>Margin Management Comments</label>
    <type>TextArea</type>
</CustomField>