force-app/main/default/objects/Territory_Plan__c/fields/Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sales Rep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Territory Plans</relationshipLabel>
    <relationshipName>R00N700000025EGKEA2</relationshipName>
    <type>Lookup</type>
</CustomField>