force-app/main/default/objects/Territory_Plan__c/fields/Retain_Customers__c.field-meta.xml
<CustomField>
    <fullName>Retain_Customers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mitigate Migration</label>
    <type>Checkbox</type>
</CustomField>