force-app/main/default/objects/Territory_Plan__c/fields/Retain_customers_comments__c.field-meta.xml
<CustomField>
    <fullName>Retain_customers_comments__c</fullName>
    <label>Mitigate Migration Comments</label>
    <type>TextArea</type>
</CustomField>