force-app/main/default/objects/Territory_Plan__c/fields/Sales_Pipeline_to_Target_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Pipeline_to_Target_Comments__c</fullName>
    <label>Sales Pipeline to Target Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>