force-app/main/default/objects/Territory_Plan__c/fields/Segment_Budget__c.field-meta.xml
<CustomField>
    <fullName>Segment_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment Budget</label>
    <referenceTo>Segment_Budget__c</referenceTo>
    <relationshipLabel>Territory Plans</relationshipLabel>
    <relationshipName>Territory_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>