force-app/main/default/objects/Territory_Plan__c/fields/Territory_Plan_Complete__c.field-meta.xml
<CustomField>
    <fullName>Territory_Plan_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box at the end of the quarter that the plan represents.  This makes it easier to tell which Territory Plan is currently in progress for the account.</inlineHelpText>
    <label>Territory Plan Closed</label>
    <type>Checkbox</type>
</CustomField>