force-app/main/default/objects/Territory_Plan__c/fields/Territory_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Territory_Plan_Summary__c</fullName>
    <label>Territory Plan Summary</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>