force-app/main/default/objects/Territory_Plan__c/fields/Total_GGTM__c.field-meta.xml
<CustomField>
    <fullName>Total_GGTM__c</fullName>
    <formula>Segment_Budget__r.FS_GTM_Budget__c + Segment_Budget__r.Packaging_GTM_Budget__c + Segment_Budget__r.Paper_GTM_Budget__c + Segment_Budget__r.Unknown_GTM_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GGTM $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>