force-app/main/default/objects/Territory_Plan__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <formula>Segment_Budget__r.FS_Sales_Budget__c  + Segment_Budget__r.Paper_Sales_Budget__c  +Segment_Budget__r.Packaging_Sales_Budget__c + Segment_Budget__r.Unknown_Sales_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>