force-app/main/default/objects/Territory_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Completed_Status__c</columns>
    <columns>Fiscal_Quarter__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>