force-app/main/default/objects/Territory_Plan__c/listViews/My_Territory_Plans.listView-meta.xml
<ListView>
    <fullName>My_Territory_Plans</fullName>
    <columns>NAME</columns>
    <columns>Primary_Sales_Rep__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Territory Plans</label>
    <language>en_US</language>
</ListView>