force-app/main/default/objects/Territory_Plan__c/listViews/My_Territory_Plans_Created_This_Year.listView-meta.xml
<ListView>
    <fullName>My_Territory_Plans_Created_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Primary_Sales_Rep__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>My Territory Plans Created This Year</label>
    <language>en_US</language>
</ListView>